--- a/src/app/directives/game-level/level.html
+++ b/src/app/directives/game-level/level.html
@@ -1,6 +1,6 @@
 <div class="main-container">
     <pics-section level=level show-overlay=showOverlay></pics-section>
     <answer-section level=level answer=answer></answer-section>
-    <alphabets-options level=level show-overlay=showOverlay on-select="sendAnswer(selected)" class="options-section" done="done()"
-        cancel="cancel()"></alphabets-options>
+    <alphabets-options level=level new-data=newData show-overlay=showOverlay on-select="sendAnswer(selected)" class="options-section"
+        done="done()" cancel="cancel()"></alphabets-options>
 </div>
