--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,6 +1,6 @@
 <div class="container">
     <flash-message duration="5000" class="flashMsgStyle" show-close="true"></flash-message>
-    <h2 class="welcomeHeader">WELCOME TO ASSESSPREP</h2>
+    <h2 class="welcomeHeader">CHALOPADHO: ASSESSPREP</h2>
     <div class="login-signup-form">
         <div class="space-bot text-center">
             <h1>Login</h1>
